# Constellation

./: .gitignore  FIX_PLAN.md  README.md  SECURITY.md  eslint.config.js  integration-test.mjs  package-lock.json  package.json  snake.py
.github/workflows/: ci.yml
.serena/: project.yml
.sisyphus/run-continuation/: ses_10147d084ffe3w8l3p13iZ4dRy.json  ses_10a01c1aeffedOjUYXsRxIRagG.json
client/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
client/src/: App.tsx  router.tsx
docs/: PLAN.md  SPEC.md  execution-plan-components.md  execution-plan-phases.md  new_spec.md
python/: README.md  pyproject.toml
python/src/constellation/: __init__.py  config.py  main.py
python/src/constellation/api/: __init__.py  graph.py  health.py  mappings.py  providers.py  tasks.py
python/src/constellation/models/: __init__.py  graph.py  mapping.py  provider.py  task.py
python/src/constellation/services/: __init__.py  data_mapper.py  embeddings.py  graph_engine.py  persistence.py  provider_registry.py  vector_store.py
python/src/constellation/utils/: __init__.py  ast_parser.py  file_scanner.py  logger.py
python/src/constellation/workers/: __init__.py  indexer.py  sync.py
python/tests/: __init__.py  conftest.py  test_api.py  test_embeddings.py  test_graph_engine.py  test_providers.py
server/: .constellation-workspace  package.json  tsconfig.json
server/data/: constellation.db
server/src/: config.ts  db.ts  event-bus.ts  file-service.ts  index.ts  process-manager.ts  types.ts  (+3 more)
shared/: package.json  tsconfig.json  tsconfig.tsbuildinfo
(+101 files in other folders)
